fixing spacing and colors of description area

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,19 @@ footer{
   color: #111;
 }
 
+.exhibitionnames {
+  padding-bottom:10px;
+  font: 30px;
+}
+
+.exhibitiondescriptions {
+  color: #777;
+  background-color: #F2E8CF;
+  text-align:center;
+  padding:50px 80px;
+  text-align: justify;
+}
+
 
 
 @media (max-width: 768px) {
